Fix breadcrumb overflow UI

--- a/src/app/shared/components/breadcrumb/breadcrumb.component.scss
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.scss
@@ -1,7 +1,12 @@
 @import 'src/app/shared/styles';
 
+.breadcrumb-wrapper {
+  margin-bottom: rem(16px);
+}
+
 .part {
   display: inline-block;
+  margin: 0;
 }
 
 .divider {
